--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           rel="stylesheet"/>
@@ -11,7 +12,7 @@
 <body>
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-4">
+        <div class="col-sm-12 col-md-4 col-xs-12">
             <h1>Sign In</h1>
             <form action="">
                 <div class="form-group">
