--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -26,7 +26,8 @@
                            id="password"
                            placeholder="Enter Password">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block wbdv-button wbdv-login">Sign
+                <button type="submit" id="loginButton"
+                        class="btn btn-primary btn-block wbdv-button wbdv-login">Sign
                     In
                 </button>
                 <div class="row">
