--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -35,7 +35,8 @@
                         <a href="#" class="wbdv-link wbdv-forgot-password">Forgot Password?</a>
                     </div>
                     <div class="col-6">
-                        <a href="#" class="float-right wbdv-link wbdv-register">Sign Up</a>
+                        <a href="/register/register.template.client.html"
+                           class="float-right wbdv-link wbdv-register">Sign Up</a>
                     </div>
                 </div>
             </form>
