--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-sm-12 col-md-4 col-xs-12">
+        <div class="col-xs-12 col-md-4">
             <h1>Sign In</h1>
             <form action="">
                 <div class="form-group">
