Added cancel buttons

--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -26,10 +26,19 @@
                            id="password"
                            placeholder="Enter Password">
                 </div>
-                <button type="submit" id="loginButton"
-                        class="btn btn-primary btn-block wbdv-button wbdv-login">Sign
-                    In
-                </button>
+                <div class="row">
+                    <div class="col-4">
+                        <a href="/" id="cancelButton"
+                           class="btn btn-dark text-white btn-block wbdv-button wbdv-register">Cancel
+                        </a>
+                    </div>
+                    <div class="col-8">
+                        <button type="submit" id="loginButton"
+                                class="btn btn-primary btn-block wbdv-button wbdv-login">Sign
+                            In
+                        </button>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-6">
                         <a href="#" class="wbdv-link wbdv-forgot-password">Forgot Password?</a>
