--- a/src/main/webapp/register/register.template.client.html
+++ b/src/main/webapp/register/register.template.client.html
@@ -31,10 +31,19 @@
                            id="verify-password"
                            placeholder="Re-enter Password">
                 </div>
-                <button type="submit" id="registerButton"
-                        class="btn btn-primary btn-block wbdv-button wbdv-register">Sign
-                    Up
-                </button>
+                <div class="row">
+                    <div class="col-4">
+                        <a href="/" id="cancelButton"
+                                class="btn btn-dark text-white btn-block wbdv-button wbdv-register">Cancel
+                        </a>
+                    </div>
+                    <div class="col-8">
+                        <button type="submit" id="registerButton"
+                                class="btn btn-primary btn-block wbdv-button wbdv-register">Sign
+                            Up
+                        </button>
+                    </div>
+                </div>
                 <a href="/login/login.template.client.html" class="wbdv-link wbdv-login">Login</a>
             </form>
         </div>
