--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="container h-100">
+<div class="container-fluid h-100">
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-xs-12 col-md-4">
             <h1>Sign In</h1>
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-4">
                         <a href="/" id="cancelButton"
-                           class="btn btn-dark text-white btn-block wbdv-button wbdv-register">Cancel
+                           class="btn btn-outline-dark btn-block wbdv-button wbdv-register">Cancel
                         </a>
                     </div>
                     <div class="col-8">
