Added 'whiteboard' in html titles

--- a/src/main/webapp/register/register.template.client.html
+++ b/src/main/webapp/register/register.template.client.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="register.style.client.css" rel="stylesheet"/>
-    <title>Sign Up</title>
+    <title>Sign Up| Whiteboard</title>
 </head>
 <body>
 <div class="container-fluid h-100">
