--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Login | Whiteboard</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="login.style.client.css" rel="stylesheet"/>
