Added a simple welcome landing page with options to login and sign-up

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome! | Whiteboard</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          rel="stylesheet"/>
+    <link href="index.style.client.css" rel="stylesheet"/>
 </head>
 <body>
-<h1>Hello</h1>
+<div class="container-fluid h-100">
+    <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-xs-12">
+            <h1 class="display-4 text-center">Welcome to Whiteboard!<br/>
+                <!--            <h6>A Learning Management Platform</h6>-->
+                <div class="row mt-2">
+                    <div class="col-5">
+                        <a href="/register/register.template.client.html"
+                           class="btn btn-outline-dark btn-block btn-lg">Sign Up</a>
+                    </div>
+                    <div class="col-7">
+                        <a href="/login/login.template.client.html"
+                           class="btn btn-primary btn-block btn-lg">Login</a>
+                    </div>
+                </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
