Added margins in index page to make it look better on mobile

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
         <div class="col-xs-12">
             <h1 class="display-4 text-center">Welcome to Whiteboard!<br/>
                 <!--            <h6>A Learning Management Platform</h6>-->
-                <div class="row mt-2">
+                <div class="row mx-1 mt-2">
                     <div class="col-5">
                         <a href="/register/register.template.client.html"
                            class="btn btn-outline-dark btn-block btn-lg">Sign Up</a>
