--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,9 +12,9 @@
 <div class="container-fluid h-100">
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-xs-12">
-            <h1 class="display-4 text-center">Welcome to Whiteboard!<br/>
+            <h1 class="display-4 text-center">Welcome to Whiteboard!</h1>
                 <!--            <h6>A Learning Management Platform</h6>-->
-                <div class="row mx-1 mt-2">
+                <div class="row mx-1">
                     <div class="col-5">
                         <a href="/register/register.template.client.html"
                            class="btn btn-outline-dark btn-block btn-lg">Sign Up</a>
