Removed redundent grid classes

--- a/src/main/webapp/register/register.template.client.html
+++ b/src/main/webapp/register/register.template.client.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container-fluid h-100">
     <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-xs-12 col-md-4">
+        <div class="col-md-4">
             <h1>Sign Up</h1>
             <form action="">
                 <div class="form-group">
