Changed from form to div

--- a/src/main/webapp/register/register.template.client.html
+++ b/src/main/webapp/register/register.template.client.html
@@ -13,7 +13,7 @@
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-md-4">
             <h1>Sign Up</h1>
-            <form action="">
+            <div>
                 <div class="form-group">
                     <label class="col-form-label" for="username">Username</label>
                     <input type="text" class="form-control wbdv-field wbdv-username" id="username"
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <a href="/login/login.template.client.html" class="wbdv-link wbdv-login">Login</a>
-            </form>
+            </div>
         </div>
     </div>
 </div>
