--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -14,7 +14,7 @@
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-md-4">
             <h1>Sign In</h1>
-            <form action="">
+            <div>
                 <div class="form-group">
                     <label class="col-form-label" for="username">Username</label>
                     <input type="text" class="form-control wbdv-field wbdv-username" id="username"
@@ -48,7 +48,7 @@
                            class="float-right wbdv-link wbdv-register">Sign Up</a>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
