--- a/src/main/webapp/profile/profile.template.client.html
+++ b/src/main/webapp/profile/profile.template.client.html
@@ -12,7 +12,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-md-5">
-            <h1>Profile</h1>
+            <h1>Edit Profile</h1>
             <div>
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label" for="username">Username</label>
@@ -54,16 +54,13 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="col-sm-9 offset-sm-3">
+                    <div class=" col-sm-3 offset-sm-3">
+                        <a href="/" class="btn btn-outline-danger btn-block">Logout</a>
+                    </div>
+                    <div class=" col-sm-6 mt-2 mt-sm-0">
                         <button type="submit" class="btn btn-success btn-block">Update</button>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div class="col-sm-9 offset-sm-3">
-                        <a href="/" class="btn btn-danger btn-block">Logout</a>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
