Changed from button to anchor

--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -33,10 +33,11 @@
                         </a>
                     </div>
                     <div class="col-8">
-                        <button type="submit" id="loginButton"
-                                class="btn btn-primary btn-block wbdv-button wbdv-login">Sign
+                        <a href="/profile/profile.template.client.html"
+                           id="loginButton"
+                           class="btn btn-primary btn-block wbdv-button wbdv-login">Sign
                             In
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <div class="row">
