--- a/src/main/webapp/register/register.template.client.html
+++ b/src/main/webapp/register/register.template.client.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,10 +38,10 @@
                         </a>
                     </div>
                     <div class="col-8">
-                        <button type="submit" id="registerButton"
-                                class="btn btn-primary btn-block wbdv-button wbdv-register">Sign
+                        <a href="/profile/profile.template.client.html" id="registerButton"
+                           class="btn btn-primary btn-block wbdv-button wbdv-register">Sign
                             Up
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <a href="/login/login.template.client.html" class="wbdv-link wbdv-login">Login</a>
