--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -6,13 +6,13 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link rel="stylesheet"
-          href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+          href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
     <link href="profile.style.client.css" rel="stylesheet"/>
     <title>Course List | Whiteboard</title>
 </head>
 <body>
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark">
 
     <div class="container-fluid ">
         <div class="row">
@@ -25,7 +25,7 @@
             </div>
             <div class="col-2 mt-1">
             <span class="wbdv-button wbdv-add-course"><i
-                    class="las la-plus-circle la-2x text-light "></i></span>
+                    class="fa fa-plus-circle fa-2x text-light"></i></span>
             </div>
         </div>
     </div>
@@ -33,38 +33,51 @@
 </nav>
 </body>
 <div class="container-fluid ">
-    <div class="row">
-        <div class="col-8">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                </tbody>
-            </table>
+    <div class="row justify-content-center">
+        <div class="col-9">
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Owned By</th>
+                        <th scope="col">Last Modified</th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <td>CS 5610 - Web Development</td>
+                        <td>Jose Annunziato</td>
+                        <td>1/14/2020</td>
+                        <td><i class="fas fa-trash"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <td>CS 2010 - Programming Design Paradigms</td>
+                        <td>Amit Shesh</td>
+                        <td>12/20/2019</td>
+                        <td><i class="fas fa-trash"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <td>CS 6200 - Information Retrieval</td>
+                        <td>David Smith</td>
+                        <td>11/13/2019</td>
+                        <td><i class="fas fa-trash"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <td>CS 5800 - Algorithms</td>
+                        <td>John Park</td>
+                        <td>1/10/2020</td>
+                        <td><i class="fas fa-trash"></i></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </html>
