Made course list table responsive

--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-dark bg-dark">
 
-    <div class="container-fluid ">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-4">
                 <span class="navbar-brand">Course List</span>
@@ -34,15 +34,15 @@
 </body>
 <div class="container-fluid ">
     <div class="row justify-content-center">
-        <div class="col-9">
+        <div class="col-md-8">
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
                     <tr>
                         <th scope="col"></th>
                         <th scope="col">Title</th>
-                        <th scope="col">Owned By</th>
-                        <th scope="col">Last Modified</th>
+                        <th class="d-none d-md-table-cell" scope="col">Owned By</th>
+                        <th class="d-none d-md-table-cell" scope="col">Last Modified</th>
                         <th scope="col"></th>
                     </tr>
                     </thead>
@@ -50,29 +50,29 @@
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
                         <td>CS 5610 - Web Development</td>
-                        <td>Jose Annunziato</td>
-                        <td>1/14/2020</td>
+                        <td class="d-none d-md-table-cell">Jose Annunziato</td>
+                        <td class="d-none d-md-table-cell">1/14/2020</td>
                         <td><i class="fas fa-trash"></i></td>
                     </tr>
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
                         <td>CS 2010 - Programming Design Paradigms</td>
-                        <td>Amit Shesh</td>
-                        <td>12/20/2019</td>
+                        <td class="d-none d-md-table-cell">Amit Shesh</td>
+                        <td class="d-none d-md-table-cell">12/20/2019</td>
                         <td><i class="fas fa-trash"></i></td>
                     </tr>
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
                         <td>CS 6200 - Information Retrieval</td>
-                        <td>David Smith</td>
-                        <td>11/13/2019</td>
+                        <td class="d-none d-md-table-cell">David Smith</td>
+                        <td class="d-none d-md-table-cell">11/13/2019</td>
                         <td><i class="fas fa-trash"></i></td>
                     </tr>
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
                         <td>CS 5800 - Algorithms</td>
-                        <td>John Park</td>
-                        <td>1/10/2020</td>
+                        <td class="d-none d-md-table-cell">John Park</td>
+                        <td class="d-none d-md-table-cell">1/10/2020</td>
                         <td><i class="fas fa-trash"></i></td>
                     </tr>
                     </tbody>
