--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -60,7 +60,7 @@
 </nav>
 <div class="container-fluid ">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col">
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
