Added required css classes

--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -40,16 +40,16 @@
         <div class="row justify-content-end w-100">
             <div class="col-1 mx-1">
                 <button type="button" class="btn">
-                    <i class="fas fa-th fa-lg float-right"></i>
+                    <i class="fas fa-th fa-lg float-right wbdv-button wbdv-grid-layout"></i>
                 </button>
             </div>
             <div class="col-1 mx-1">
                 <button type="button" class="btn">
-                    <i class="fas fa-lg fa-list-ul float-right"></i>
+                    <i class="fas fa-lg fa-list-ul float-right wbdv-button wbdv-list-layout"></i>
                 </button>
             </div>
             <div class="col-1 mx-1">
-                <button type="button" class="btn">
+                <button type="button" class="btn wbdv-header wbdv-sort">
                     <i class="fas fa-lg fa-sort-numeric-down float-right"></i>
                 </button>
             </div>
@@ -78,10 +78,14 @@
                     </thead>
                     <tbody>
                     <tr class="wbdv-row wbdv-course">
-                        <th scope="row" class="align-middle wbdv-row wbdv-icon"><i class="fas fa-book"></i></th>
+                        <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
+                                class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title">CS 5610 - Web Development</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Jose Annunziato</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">1/14/2020
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Jose
+                            Annunziato
+                        </td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">
+                            1/14/2020
                         </td>
                         <td class="align-middle wbdv-row wbdv-button wbdv-delete">
                             <button type="button" class="btn"><i class="fas fa-trash"></i></button>
@@ -89,18 +93,30 @@
                     </tr>
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
-                        <td class="align-middle wbdv-row wbdv-title">CS 2010 - Programming Design Paradigms</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Amit Shesh</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">12/20/2019</td>
+                        <td class="align-middle wbdv-row wbdv-title">CS 2010 - Programming Design
+                            Paradigms
+                        </td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Amit
+                            Shesh
+                        </td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">
+                            12/20/2019
+                        </td>
                         <td class="align-middle wbdv-row wbdv-button wbdv-delete">
                             <button type="button" class="btn"><i class="fas fa-trash"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
-                        <td class="align-middle wbdv-row wbdv-title">CS 6200 - Information Retrieval</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">David Smith</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">11/13/2019</td>
+                        <td class="align-middle wbdv-row wbdv-title">CS 6200 - Information
+                            Retrieval
+                        </td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">David
+                            Smith
+                        </td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">
+                            11/13/2019
+                        </td>
                         <td class="align-middle wbdv-row wbdv-button wbdv-delete">
                             <button type="button" class="btn"><i class="fas fa-trash"></i></button>
                         </td>
@@ -108,8 +124,12 @@
                     <tr>
                         <th scope="row"><i class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title">CS 5800 - Algorithms</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">John Park</td>
-                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">1/10/2020</td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">John
+                            Park
+                        </td>
+                        <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-modified-date">
+                            1/10/2020
+                        </td>
                         <td class="align-middle wbdv-row wbdv-button wbdv-delete">
                             <button type="button" class="btn"><i class="fas fa-trash"></i></button>
                         </td>
