fixed course icon alignment

--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -92,7 +92,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
+                                class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title">CS 2010 - Programming Design
                             Paradigms
                         </td>
@@ -107,7 +108,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
+                                class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title">CS 6200 - Information
                             Retrieval
                         </td>
@@ -122,7 +124,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"><i class="fas fa-book"></i></th>
+                        <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
+                                class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title">CS 5800 - Algorithms</td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">John
                             Park
