Created course editor with top and left nav

--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
-    <link href="profile.style.client.css" rel="stylesheet"/>
+    <link href="course-list.style.client.css" rel="stylesheet"/>
     <title>Course List | Whiteboard</title>
 </head>
 <body>
@@ -80,7 +80,9 @@
                     <tr class="wbdv-row wbdv-course">
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
-                        <td class="align-middle wbdv-row wbdv-title">CS 5610 - Web Development</td>
+                        <td class="align-middle wbdv-row wbdv-title"><a
+                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                            5610 - Web Development</a></td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Jose
                             Annunziato
                         </td>
@@ -94,8 +96,10 @@
                     <tr>
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
-                        <td class="align-middle wbdv-row wbdv-title">CS 2010 - Programming Design
-                            Paradigms
+                        <td class="align-middle wbdv-row wbdv-title"><a
+                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                            2010 - Programming Design
+                            Paradigms</a>
                         </td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Amit
                             Shesh
@@ -110,9 +114,11 @@
                     <tr>
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
-                        <td class="align-middle wbdv-row wbdv-title">CS 6200 - Information
+                        <td class="align-middle wbdv-row wbdv-title"><a
+                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                            6200 - Information
                             Retrieval
-                        </td>
+                        </a></td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">David
                             Smith
                         </td>
@@ -126,7 +132,9 @@
                     <tr>
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
-                        <td class="align-middle wbdv-row wbdv-title">CS 5800 - Algorithms</td>
+                        <td class="align-middle wbdv-row wbdv-title"><a
+                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                            5800 - Algorithms</a></td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">John
                             Park
                         </td>
