Made the side bar light and added button

--- a/src/main/webapp/course-editor/course-editor.template.client.html
+++ b/src/main/webapp/course-editor/course-editor.template.client.html
@@ -30,9 +30,9 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+    <div class="collapse navbar-collapse " >
+        <ul class="navbar-nav mr-auto ">
+            <li class="nav-item ">
                 <a class="nav-link" href="#">Build</a>
             </li>
             <li class="nav-item active">
@@ -52,29 +52,42 @@
             </li>
 
         </ul>
-        <div class="form-inline my-2 my-lg-0">
+        <div class="my-2 my-lg-0">
             <button class="btn btn-outline-light text-light"><i
                     class="fas fa-plus wbdv-new-page-btn"></i></button>
         </div>
     </div>
 </nav>
-<div class="container-fluid h-100   d-flex flex-column">
+<div class="container-fluid d-flex flex-column">
     <div class="row flex-fill">
-        <div class="col-sm-2  pt-3 wbdv-nav-col h-100 ">
-            <ul class="nav nav-pills light text-light flex-sm-column">
-                <li class="nav-item">
-                    <span class="nav-link active" href="#">Module 1 - jQuery</span>
+        <div class="col-sm-4 col-md-3 pt-3 wbdv-nav-col h-100 ">
+            <ul class="nav nav-pills  flex-column">
+                <li class="nav-item ">
+                    <span class="nav-link active " href="#">Module 1
+                    <span class="float-right"><i class="fas fa-trash ml-2"></i></span></span>
                 </li>
                 <li class="nav-item">
-                    <span class="nav-link" href="#">Module 2 - React</span>
-                </li>
-                <li class="nav-item">
-                    <span class="nav-link" href="#">Module 3 - Redux</span>
+                    <span class="nav-link " href="#">Module 2
+                    <span class="float-right"><i class="fas fa-trash ml-2"></i></span></span>
                 </li>
 
+                <li class="nav-item">
+                    <span class="nav-link" href="#">Module 3
+                    <span class="float-right"><i class="fas fa-trash ml-2"></i></span></span>
+                </li>
+                <li class="nav-item">
+                    <span class="nav-link" href="#">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control transparent-input text-light">
+                              <div class="input-group-append">
+                                  <button class=" btn  bg-none wbdv-module-item-add-btn"><i
+                                          class="fas fa-plus "></i></button>
+                              </div>
+                        </div></span>
+                </li>
             </ul>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-8 col-md-7">
             <h1>Yo</h1>
         </div>
     </div>
