--- a/src/main/webapp/course-editor/course-editor.template.client.html
+++ b/src/main/webapp/course-editor/course-editor.template.client.html
@@ -23,20 +23,20 @@
             </li>
         </ul>
     </div>
-    <a class="navbar-brand" href="#">Course Editor</a>
+    <a class="navbar-brand wbdv-course-title" href="#">CS 5610 - Web Dev</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse " >
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto ">
             <li class="nav-item ">
                 <a class="nav-link" href="#">Build</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Pages <span class="sr-only">(current)</span></a>
+                <a class="nav-link wbdv-page-tab" href="#">Pages <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Theme</a>
@@ -53,42 +53,116 @@
 
         </ul>
         <div class="my-2 my-lg-0">
-            <button class="btn btn-outline-light text-light"><i
+            <button class="btn btn-outline-light text-light wbdv-new-page-btn"><i
                     class="fas fa-plus wbdv-new-page-btn"></i></button>
         </div>
     </div>
 </nav>
 <div class="container-fluid d-flex flex-column">
     <div class="row flex-fill">
-        <div class="col-sm-4 col-md-3 pt-3 wbdv-nav-col h-100 ">
-            <ul class="nav nav-pills  flex-column">
-                <li class="nav-item ">
-                    <span class="nav-link active " href="#">Module 1
-                    <span class="float-right"><i class="fas fa-trash ml-2"></i></span></span>
+        <div class="col-sm-4 col-md-3 mt-3 wbdv-nav-col h-100 ">
+            <ul class="nav nav-pills flex-column wbdv-module-list">
+                <li class="nav-item wbdv-module-item active">
+                    <a class="nav-link wbdv-module-item-title" href="#">Module 1</a>
+                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i class="fas fa-trash ml-2"></i></span>
                 </li>
-                <li class="nav-item">
-                    <span class="nav-link " href="#">Module 2
-                    <span class="float-right"><i class="fas fa-trash ml-2"></i></span></span>
+                 <li class="nav-item wbdv-module-item">
+                    <a class="nav-link wbdv-module-item-title" href="#">Module 2</a>
+                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i class="fas fa-trash ml-2"></i></span>
                 </li>
 
-                <li class="nav-item">
-                    <span class="nav-link" href="#">Module 3
-                    <span class="float-right"><i class="fas fa-trash ml-2"></i></span></span>
+                 <li class="nav-item wbdv-module-item">
+                    <a class="nav-link wbdv-module-item-title" href="#">Module 3</a>
+                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i class="fas fa-trash ml-2"></i></span>
                 </li>
-                <li class="nav-item">
-                    <span class="nav-link" href="#">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control transparent-input text-light">
-                              <div class="input-group-append">
-                                  <button class=" btn  bg-none wbdv-module-item-add-btn"><i
-                                          class="fas fa-plus "></i></button>
-                              </div>
-                        </div></span>
+                 <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <div class="input-group">
+                            <input type="text" class="form-control transparent-input">
+                            <div class="input-group-append">
+                                <button class="btn bg-none wbdv-module-item-add-btn"><i
+                                        class="fas fa-plus "></i></button>
+                            </div>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </div>
-        <div class="col-sm-8 col-md-7">
-            <h1>Yo</h1>
+        <div class="col-sm-8 mt-sm-3 col-md-9">
+            <ul class="nav nav-pills wbdv-topic-pill-list">
+                <li class="nav-item">
+                    <a class="nav-link wbdv-topic-pill" href="#">Topic 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link wbdv-topic-pill active" href="#">Topic 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link wbdv-topic-pill" href="#">Topic 3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link wbdv-topic-pill" href="#">Topic 4</a>
+                </li>
+            </ul>
+            <div class="row ">
+                <div class="col justify-content-end d-flex">
+                    <div class="form-inline">
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input"
+                                   id="customSwitch1">
+                            <label class="custom-control-label"
+                                   for="customSwitch1">Preview</label>
+                        </div>
+                        <span class="ml-2">
+                            <button class="btn btn-success" type="button">Save</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-1 border rounded">
+
+                <div class="row mx-1 my-2">
+                    <div class="col ">
+                        <h5 class="wbdv-widget-header mt-2 align-center">Heading Widget</h5>
+                        <span class="float-md-right form-inline">
+                        <button class="btn btn-info m-1"><i class="fas fa-arrow-down"></i></button>
+                        <button class="btn btn-info m-1"><i class="fas fa-arrow-up"></i></button>
+                        <select class="custom-select m-1">
+                            <option value="heading">Heading</option>
+                        </select>
+                        <button class="btn btn-danger m-1"><i class="fas fa-times"></i></button>
+                    </span>
+                    </div>
+                </div>
+                <div class="row mx-1 my-2">
+                    <div class="col">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Heading text"
+                                   value="Heading text"/>
+                        </div>
+                        <div class="form-group">
+                            <select class="custom-select">
+                                <option value="heading1">Heading 1</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Widget Name"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mx-1 my-2">
+                    <div class="col">
+                        <h5>Preview</h5>
+                        <h1>Heading text</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="float-right">
+                        <button class="btn btn-success m-1"><i class="fas fa-plus-circle"></i></button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
